# ftl-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile  Doxyfile  Jenkinsfile  README.md  README.txt  get-audio  get-video  libftl.pc.in  make-deployment-yml  start-stream
charon/: charon.h  main.c
charon/posix/: ctrlc_handler.c
charon/win32/: ctrlc_handler.c  xgetopt.c  xgetopt.cpp
docs/html/: annotated.html  classes.html  dir_d779998ae5def5d1fe9c81192f281306.html  files.html  ftl_8h.html  ftl_8h_source.html  ftl__private_8h_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  group__FTL.html  group__ftl__public.html  index.html  modules.html  structftl__stream__configuration__private__t-members.html  structftl__stream__configuration__private__t.html  structftl__stream__configuration__t-members.html  structftl__stream__configuration__t.html
docs/html/search/: all_0.js  all_1.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  search.js
ftl_app/: bitstream.c  decode.c  file_parser.c  file_parser.cpp  file_parser.h  gettimeofday.c  gettimeofday.h  main.c  main.cpp  main.h  nalu.c  pcap.c  pcap.h
ftl_app/posix/: ctrlc_handler.c
ftl_app/win32/: ctrlc_handler.c  xgetopt.cpp  xgetopt.h
libftl/: activate.c  auto_bw.c  charon_protocol.c  components.c  create_stream.c  deactivate.c  destroy_stream.c  ftl-sdk.c  ftl-sdk.cpp  ftl.h  ftl_helpers.c  ftl_helpers.cpp  ftl_private.h  handshake.c  handshake.cpp  ingest.c  ingest.cpp  ingestconnection.cpp  init.c  logging.c  media.c  media.cpp  stream_configuration.c
libftl/gettimeofday/: gettimeofday.c  gettimeofday.h
libftl/hmac/: hmac.c  hmac.cpp  hmac.h  sha2.c  sha2.h
libftl/posix/: socket.c  socket.h  threads.c  threads.cpp  threads.h
libftl/win32/: gettimeofday.c  gettimeofday.h  socket.c  socket.h  threads.c  threads.cpp  threads.h
scripts/: build  docker-build  docker-test  lint  prep-artifacts  test
src/libftl/: activate.c  ftl_private.h  logging.c
src/libftl/posix/: socket.c
